<resources>
    <string name="history">History</string>
    <string name="create_qr_code">Create QRCode</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="scanner">Scanner</string>
    <string name="place_the_code_in_the_frame">Place the code in the frame</string>
    <string name="product">Product</string>
    <string name="end">End:</string>
    <string name="start">Start:</string>
    <string name="description">Description:</string>
    <string name="location">Location%s</string>
    <string name="title">title:</string>
    <string name="show_code">Show code</string>
    <string name="web">Website</string>
    <string name="text">Text%s</string>
    <string name="phone">Phone</string>
    <string name="mess">Message</string>
    <string name="email">Email%s</string>
    <string name="tv_location">Location</string>
    <string name="contact">Contact</string>
    <string name="wifi">Wifi</string>
    <string name="event">Event</string>
    <string name="search">Search</string>
    <string name="no_data">No Data</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="name">Name%s</string>
    <string name="create">Create</string>
    <string name="url">URL:</string>
    <string name="ssid">SSID:</string>
    <string name="connect_to_wifi">Connect to wifi</string>
    <string name="password">Password:</string>
    <string name="encryption">Encryption:</string>
    <string name="copy_password">Copy password</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message%s</string>
    <string name="send_email">Send email</string>
    <string name="copy_text">Copy text</string>
    <string name="phone_number">Phone number%s</string>
    <string name="call">Call %s</string>
    <string name="send_sms">Send SMS</string>
    <string name="add_contact">Add contact</string>
    <string name="address">Address:</string>
    <string name="telephone">Telephone:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="show_location_in_map">Show location in map</string>
    <string name="none">NONE</string>
    <string name="wep">WEP</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="open_in_website">Open in website</string>
    <string name="add_event_to_calendar">Add event to calendar</string>
    <string name="unknown_type">"Unknown QRCode Type"</string>
    <string name="barcode">Barcode:</string>
    <string name="sort_type_name">Name</string>
    <string name="create_qr_code_text">Text</string>
    <string name="create_qr_code_email">Email</string>
    <string name="select_picture">Select Picture</string>
    <string name="copied">Copied</string>
    <string name="qr_code">QRCode</string>
    <string name="download_image">Download Image</string>
    <string name="share_image">Share Image</string>
    <string name="photo_sharing_failed">Photo sharing failed</string>
    <string name="permission_external_storage">Permission write external storage is required</string>
    <string name="sound">Sound</string>
    <string name="rate_app">Rate App</string>
    <string name="feed_back">FeedBack</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="cancel">Cancel</string>
    <string name="how_much_do_you_love_app">How much do you love app?</string>
    <string name="thanks_for_your_rating">Thanks for your rating</string>
    <string name="action_failed">Action Failed</string>
    <string name="website">WEBSITE</string>
    <string name="https">https://</string>
    <string name="text1">TEXT</string>
    <string name="enter_you_text">Enter you text</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone1">PHONE</string>
    <string name="import1">Import</string>
    <string name="message1">MESSAGE</string>
    <string name="to1">To</string>
    <string name="email1">EMAIL</string>
    <string name="subject1">Subject</string>
    <string name="name1">Name</string>
    <string name="email2">Email</string>
    <string name="address1">Address</string>
    <string name="telephone1">Telephone</string>
    <string name="contact1">CONTACT</string>
    <string name="wifi1">WIFI</string>
    <string name="ssid1">SSID</string>
    <string name="password1">Password</string>
    <string name="event1">EVENT</string>
    <string name="title1">Title</string>
    <string name="location1">Location</string>
    <string name="description1">Description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="invalid_text">You did not enter content</string>
    <string name="invalid_ssid">You did not enter wifi name</string>
    <string name="invalid_website">Invalid website</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="enter_contact_name">Contact name is required</string>
    <string name="filed_required">Title, Start time and End time is required</string>
    <string name="my_qr_code">My QrCode</string>
    <string name="delete_history">Delete History</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">"Do you want to delete all QRCode scanning history?"</string>
    <string name="current_location">Current Location</string>
    <string name="do_you_want_to_delete_all_generated_qr_code">Do you want to delete all generated QRCode?</string>
    <string name="delete_qr_code">Delete QRCode</string>
    <string name="the_contact_has_no_email">The contact has no email</string>
    <string name="permission_contact_is_required">Permission Contact is required for this function</string>
    <string name="permission_required">Permission Required</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="permission_location_is_required_for_this_function">Permission location is required for this function</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="permission_camera_is_required">Permission camera is required</string>
    <string name="save_image_successfully">Save image successfully</string>
    <string name="the_end_time_must_be_greater_than_the_start_time">The end time must be greater than the start time</string>
    <string name="the_start_time_must_be_greater_than_the_current_time">The start time must be greater than the current time</string>
    <string name="send_email_report_app">Send email report app</string>
    <string name="please_rate_5_stars">Please rate 5 stars</string>
    <string name="no_barcode_detect">No barcode could be detected. Please try again.</string>
    <string name="network_not_available">Network not available</string>
    <string name="this_wifi_has_no_password">This wifi has no password !!!</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
    <string name="please_turn_on_network_and_gps">Please turn on Network and GPS</string>
    <string name="please_try_again">Please try again</string>
    <string name="cannot_create_qrcode">Cannot create QR Code (too much data)</string>
    <string name="invalid_location">Invalid location</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="invalid_latitude">The latitude must be a number between -90 and 90</string>
    <string name="invalid_longitude">The longitude must be a number between -180 and 180</string>
    <string name="choose_one">Choose one</string>
    <string name="location_not_found">Location not found</string>
</resources>