<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_1">
    
    <TextView
        android:id="@+id/tv_qr_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/wifi1"
        android:textColor="#828282"
        android:textSize="@dimen/ts_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wpa_wpa2" />

    <EditText
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/edt_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_radius_16dp"
        android:fontFamily="@font/jost_regular"
        android:gravity="center|start"
        android:hint="@string/ssid1"
        android:paddingHorizontal="18dp"
        android:paddingVertical="18dp"
        android:textColor="?attr/text_color"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="@dimen/ts_18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_qr_type" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/require_filed_icon"
        app:layout_constraintEnd_toEndOf="@id/edt_ssid"
        app:layout_constraintTop_toTopOf="@id/edt_ssid" />

    <EditText
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_radius_16dp"
        android:fontFamily="@font/jost_regular"
        android:gravity="center|start"
        android:hint="@string/password1"
        android:paddingHorizontal="18dp"
        android:paddingVertical="18dp"
        android:textColor="?attr/text_color"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="@dimen/ts_18sp"
        app:layout_constraintTop_toBottomOf="@id/edt_ssid" />

    <TextView
        android:id="@+id/tv_wpa_wpa2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_blue_ripple_radius_26"
        android:fontFamily="@font/jost_medium"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/wpa_wpa2"
        android:textColor="#FBFBFB"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tv_wep"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wep"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/jost_medium"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/wep"
        android:textColor="@color/gray_A3A3A3"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tv_none"
        app:layout_constraintStart_toEndOf="@id/tv_wpa_wpa2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_none"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/jost_medium"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/none"
        android:textColor="@color/gray_A3A3A3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_wep"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_radius_100"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_wep"
        app:layout_constraintEnd_toEndOf="@id/tv_none"
        app:layout_constraintStart_toStartOf="@id/tv_wpa_wpa2"
        app:layout_constraintTop_toTopOf="@id/tv_wep" />

</androidx.constraintlayout.widget.ConstraintLayout>
