<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_radius_16dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/jost_medium"
            android:gravity="center"
            android:text="@string/delete_history"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jost_light"
            android:text="@string/do_you_want_to_delete"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/bg_red_ripple_radius_100"
            android:fontFamily="@font/jost_regular"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:layout_marginVertical="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_gray_ripple_radius_100"
            android:fontFamily="@font/jost_regular"
            android:text="@string/cancel"
            android:textColor="#828282"
            android:textSize="@dimen/ts_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>