<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_1"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_qr_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/contact1"
            android:textColor="#828282"
            android:textSize="@dimen/ts_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_radius_16dp"
            android:fontFamily="@font/jost_regular"
            android:gravity="center|start"
            android:hint="@string/name1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:overScrollMode="always"
            android:paddingHorizontal="18dp"
            android:paddingVertical="16dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="horizontal"
            android:textColor="?attr/text_color"

            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_qr_type" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/require_filed_icon"
            app:layout_constraintEnd_toEndOf="@id/edt_name"
            app:layout_constraintTop_toTopOf="@id/edt_name" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_radius_16dp"
            android:fontFamily="@font/jost_regular"
            android:gravity="center|start"
            android:hint="@string/telephone1"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:overScrollMode="always"
            android:paddingHorizontal="18dp"
            android:paddingVertical="16dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="horizontal"
            android:textColor="?attr/text_color"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintTop_toBottomOf="@id/edt_address" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/require_filed_icon"
            app:layout_constraintEnd_toEndOf="@id/edt_phone_number"
            app:layout_constraintTop_toTopOf="@id/edt_phone_number" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_radius_16dp"
            android:fontFamily="@font/jost_regular"
            android:gravity="center|start"
            android:hint="@string/email2"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:overScrollMode="always"
            android:paddingHorizontal="18dp"
            android:paddingVertical="16dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="horizontal"
            android:textColor="?attr/text_color"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintTop_toBottomOf="@id/edt_name" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_radius_16dp"
            android:fontFamily="@font/jost_regular"
            android:gravity="center|start"
            android:hint="@string/address1"
            android:maxLines="3"
            android:overScrollMode="always"
            android:paddingHorizontal="18dp"
            android:paddingVertical="18dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="?attr/text_color"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintTop_toBottomOf="@id/edt_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:background="@drawable/bg_blue_ripple_radius_100"
            android:drawableStart="@drawable/import_contact_icon"
            android:drawablePadding="10dp"
            android:paddingHorizontal="52dp"
            android:paddingVertical="14dp"
            android:text="@string/import1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
